welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:12: error: ';' expected but 'else' found.
		else droite();
                ^SnakeBuggle:19: error: ';' expected but 'else' found.
		else gauche();
                ^